--- a/css/svgTest.css
+++ b/css/svgTest.css
@@ -18,6 +18,34 @@ svg{
     transform: translate(-50%, -50%);
 }
 
+#contextView{
+    position:absolute;
+    display: flex;
+    top : 20px;
+    right : 50px;
+    width: 20%;
+    height: 20%;
+}
+
+.card {
+    position: relative;
+    text-align: center;
+}
+
+.card span{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 50px;
+}
+
+#contextView img{
+    max-width: 100%;
+    margin-right: 20px;
+}
+
 #empty{
     text-align: center;
     vertical-align: middle;
@@ -27,6 +55,13 @@ body button{
     position:absolute;
     border-radius: 50%;
     padding : 15px;
+    color: white;
+    box-shadow: 5px 5px rgba(0,0,0,.15);
+    transition: all .4s ease;
+}
+
+body button:hover {
+    box-shadow: 0px 0px rgba(0,0,0,.25);
 }
 
 #rotate{
