--- a/css/svgTest.css
+++ b/css/svgTest.css
@@ -38,11 +38,12 @@ svg{
     left: 50%;
     transform: translate(-50%, -50%);
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 50px;
+    font-size: 100%;
 }
 
 #contextView img{
     max-width: 100%;
+    max-height:100%;
     margin-right: 20px;
 }
 
