--- a/css/cardFSM.css
+++ b/css/cardFSM.css
@@ -73,6 +73,13 @@ body button:hover {
 #rename{
     bottom : 20px;
     right : 20px;
+    display : none;
+}
+
+#detach{
+    top : 20px;
+    left : 20px;
+    display : none;
 }
 
 .blink {
