--- a/css/cardFSM.css
+++ b/css/cardFSM.css
@@ -76,9 +76,15 @@ body button:hover {
     display : none;
 }
 
-#detach{
+#close{
     top : 20px;
     left : 20px;
+    display : none;
+}
+
+#detach{
+    top : 20px;
+    left : 150px;
     display : none;
 }
 
